--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
-language: python
-python:
-    - "2.7"
-
+os: windows
+language: sh
+python: 2.7
+before_install:
+    - choco install python3
+    - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+    - python -m pip install --upgrade pip wheel
 install:
-    - 'if [ ${TRAVIS_BRANCH} \!= "master" ] && [ -f dev_requirements.txt ]; then
-        pip install --extra-index-url https://testpypi.python.org/pypi -r dev_requirements.txt;
-      else
-        pip install -r src/requirements.txt;
-      fi'
-    - pip install -r test_requirements.txt
-    - pip install coveralls
-
+    pip install shellfoundry
 script:
-    - nosetests --with-coverage --cover-package=src tests
-
-after_success:
-    - coveralls
+    - shellfoundry pack
+    - mkdir dep
+    - pip download -r src/requirements.txt -d dep
+    - zip -r dep.zip dep/*
