--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ before_install:
     - choco install python3
     - export PATH="/c/Python27:/c/Python27/Scripts:$PATH"
     - python -m pip install --upgrade pip wheel
-    - c/Python37/python -m pip install --upgrade pip wheel
+    - /c/Python37/python -m pip install --upgrade pip wheel
 install:
     pip install shellfoundry
 script:
     - export SHELL_VERSION="python -c 'import yaml; f=open("shell-definition.yaml"); y=yaml.load(f); print(y['metadata']['template_version'])'"
     - shellfoundry pack
     - mkdir dep
-    - c/Python37/Scripts/pip download -r src\requirements.txt -d dep
+    - /c/Python37/Scripts/pip download -r src\requirements.txt -d dep
     - 7z a cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep\*
 deploy:
   provider: releases
