--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
     - export SHELL_VERSION="python -c 'import yaml; f=open("shell-definition.yaml"); y=yaml.load(f); print(y['metadata']['template_version'])'"
     - shellfoundry pack
     - mkdir dep
-    - /c/Python37/Scripts/pip download -r src\requirements.txt -d dep
+    - /c/Python37/Scripts/pip download -r src/requirements.txt -d dep
     - 7z a cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep\*
 deploy:
   provider: releases
