--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
     pip install shellfoundry
 script:
     - export SHELL_VERSION="python -c 'import yaml; f=open("shell-definition.yaml"); y=yaml.load(f); print(y['metadata']['template_version'])'"
+    - echo $SHELL_VERSION
     - shellfoundry pack
     - mkdir dep
     - /c/Python37/Scripts/pip download -r src/requirements.txt -d dep
