--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ os: windows
 language: sh
 before_install:
     - choco install python2
-    - choco install python3
+    - choco install python --version=3.7.2
     - export PATH="/c/Python27:/c/Python27/Scripts:$PATH"
     - python -m pip install --upgrade pip wheel
     - /c/Python37/python -m pip install --upgrade pip wheel
