--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
     - python -c "import re; t=open('shell-definition.yaml').read(); m=re.search(r'template_version:\s+(.+)$', t, re.M); print(m.group(1).strip())" > version.txt
     - set /p SHELL_VERSION=<version.txt
+    - echo %SHELL_VERSION%
     - shellfoundry pack
     - /c/Python37/Scripts/pip download -r src/requirements.txt -d dep
     - 7z a cloudshell-networking-cisco-ios-2-gen-dependencies-package-%SHELL_VERSION%.zip dep\*
