--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
     - echo $SHELL_VERSION
     - shellfoundry pack
     - /c/Python37/Scripts/pip download -r src/requirements.txt -d dep
-    - 7z a cloudshell-networking-cisco-ios-2-gen-dependencies-package-%SHELL_VERSION%.zip dep\*
+    - 7z a cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep\*
 deploy:
   provider: releases
   skip_cleanup: true
