--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ script:
   - export GIT_TAG=$SHELL_VERSION
   - git config --local user.name $AUTHOR_NAME
   - git config --local user.email $AUTHOR_EMAIL
+  - echo $SHELL_VERSION
+  - echo $GIT_TAG
   - git tag $GIT_TAG
 deploy:
   provider: releases
