--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,5 @@
 language: python
 python: 3.7
-before_deploy:
-  - export AUTHOR_EMAIL="$(git log -1 $TRAVIS_COMMIT --pretty="%cE")"
-  - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
-  - export GIT_TAG=`python -c "import re; t=open('shell-definition.yaml').read(); m=re.search(r'template_version:\s+(.+)$', t, re.M); print(m.group(1).strip())"`
-  - git config --local user.name $AUTHOR_NAME
-  - git config --local user.email $AUTHOR_EMAIL
-  - git tag $GIT_TAG
 install:
   - pip install pip-download
 script:
@@ -14,6 +7,12 @@ script:
   - mkdir dep
   - pip-download -d dep -s "win" -py cp27 -i https://pypi.org/simple -r src/requirements.txt
   - zip -r cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep/*
+before_deploy:
+  - export AUTHOR_EMAIL="$(git log -1 $TRAVIS_COMMIT --pretty="%cE")"
+  - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
+  - git config --local user.name $AUTHOR_NAME
+  - git config --local user.email $AUTHOR_EMAIL
+  - git tag SHELL_VERSION
 deploy:
   provider: releases
   skip_cleanup: true
