--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_deploy:
   - git config --local user.email $AUTHOR_EMAIL
   - git tag $SHELL_VERSION
 deploy:
+  overwrite: true
   provider: releases
   skip_cleanup: true
   draft: true
