--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ jobs:
         - mkdir dep
         - pip-download -d dep -s "win" -py cp27 -i https://pypi.org/simple -r src/requirements.txt
         - zip -r cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep/*
-    - install: shellfoundry
+    - install: pip install shellfoundry
       script: shellfoundry pack
