--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,6 @@ jobs:
         - zip -r cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION.zip dep/*
     - install: pip install shellfoundry
       script: shellfoundry pack
+      deploy:
+        provider: releases
+        overwrite: false
