--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ jobs:
       script:
         - mkdir dep
         - pip-download -d dep -s "win" -py cp27 -i https://pypi.org/simple -r src/requirements.txt
-        - zip -r cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION-$TRAVIS_BUILD_NUMBER.zip dep/*
+        - zip -j cloudshell-networking-cisco-ios-2-gen-dependencies-package-$SHELL_VERSION-$TRAVIS_BUILD_NUMBER.zip dep/*
     - install: pip install shellfoundry
       script: shellfoundry pack
